feat(user): added endpoint for authenticating user as team manager
